# example

./: .gitignore  README.md
cpp/: .clangd  .gitignore  CMakeLists.txt  cbuild.sh  other.cpp
cpp/assets/: csv.csv  ini.ini  json.json  yaml.yaml
cpp/src/: atexit.cpp  backtrack1.cpp  backtrack2.cpp  cpp_io.cpp  cppio.cpp  custom_placeholder_replacement.cpp  distribute_evenly.cpp  get_exe_path.cpp  matrix.cpp  maze.cpp  multi_type.cpp  multithread.cpp  omp.cpp  other.cpp  path_to_nearest_grid.cpp  prime_number.cpp  remove_shared_elements.cpp  split_folder_filename.cpp  split_string.cpp  stride_step.cpp  string_huff.cpp  template_func.cpp  type_conversion.cpp  typeid.cpp
cpp/src/dynamic_programming/bag/: bag01.cpp
cpp/src/grammar/: class_heritage.cpp  delete_element_array.cpp  enum.cpp  global_variable.cpp  member_alias.cpp  member_varible_alias.cpp  template_class_inherit.cpp  try_catch.cpp  union.cpp  virtual_inherit.cpp
cpp/src/math/: cmatrix.cpp  matrix.cpp
cpp/src/practice/: find_max_ascending_subsequence.cpp  greatest_common_divisor.cpp  inverse_array.cpp  longest_string.cpp  point24.cpp  prime_number.cpp
cpp/src/space/: intersect_line_voxel.cpp  points_cover_line.cpp  project_to_plane.cpp  transform_vector_to_vertical.cpp
cpp/src/std/: array.cpp  atomic.cpp  bound.cpp  compare_sets.cpp  count.cpp  cout.cpp  filesystem.cpp  map_usage.cpp  max_element.cpp  multi_container.cpp  mutex_lock.cpp  numeric.cpp  optional.cpp  random.cpp  set.cpp  shared_pointer.cpp  smart_pointer.cpp  string.cpp  string2char.cpp  string2number.cpp  thread.cpp  utility_function.cpp  variant.cpp  vector.cpp
lib/: CMakeLists.txt  go.sh  gstam.cpp
lib/cmake/: GTSAM.cmake  OpenCV.cmake  PCL.cmake  YAML.cmake  eigen.cmake  glog.cmake
lib/eigen/: poly_fit.cpp
lib/libmy/: mathu.h  readParams.h
lib/src/: eigen.cpp  extract_images.cpp  g2o_usage.cpp  glog_usage.cpp  pcl_calculate_normal_using_octree.cpp  pcl_find_nearest_using_octree.cpp  pcl_point_fields.cpp  sensor_extrinsic_viewer.cpp  sophus.cpp  sophus_usage.cpp
lib/src/eigen/: eigen_base.cpp
lib/src/gtsam/: gtsam_usage.cpp  gtsam_variant_camera.cpp  integrate_imu.cpp  velocity_from_imu.cpp
lib/src/opencv/: rotate.cpp
lib/src/pcl/: filter_inplace.cpp  pass_through.cpp  pcl_filter_inplace.cpp  pcl_point_fields.cpp  pcl_region_growing.cpp
lib/src/ros/: ros_bag_extract_images.cpp  ros_cloud_msg_fields.cpp
project/lib3rd/: pcl_header.h  ros_header.h
project/libmy/: file_trans.h  param_server.h  readParams.h
python/: angle_addition.py  csv_draw.py  csv_dynamic_segment.py  csv_merge_sort.py  csv_plot.py  csv_processor1.py  csv_static_segment.py  csv_subplot.py  datatype.py  draw_position_direction.py  filepath.py  fit_rotation.py  handle_json.py  numbers_counter.py  poly_fit_1d.py  time.py
ros/src/intro/: CMakeLists.txt  package.xml
ros/src/intro/src/: main.cpp
ros/src/linefit_ground_segmentation/: CMakeLists.txt  package.xml
ros/src/linefit_ground_segmentation/include/: ground_segmentation.h
ros/src/linefit_ground_segmentation/src/: ground_segmentation.cpp  ground_segmentation_node.cc  ground_segmentation_test_node.cc
ros/src/points_preprocessor/: CMakeLists.txt  package.xml  readme.md
ros/src/points_preprocessor/include/: point_type.h
ros/src/points_preprocessor/nodes/cloud_transformer/: cloud_transformer_node.cpp
ros/src/points_preprocessor/nodes/compare_map_filter/: README.md  compare_map_filter.cpp
ros/src/points_preprocessor/nodes/points_concat_filter/: points_concat_filter.cpp
ros/src/points_preprocessor/nodes/space_filter/: space_filter.cpp
ros/src/rosbag/: CMakeLists.txt
ros/src/rosbag/src/: dump_bag.cpp  generate_bag_from_images_imu.cpp
script/: script.md
shell/: check_connectivity.sh  check_string_in_file.sh  concat_files.sh  download_ssh.sh  echo_file.sh  file_path.sh  math.sh  non_executable.sh  pass_arguments.sh  record_bag.sh  search_files_recursely.sh  ssh_cmd.sh  traverse.sh
