<?xml version="1.0"?>
<package format="1">
  <name>linefit_ground_segmentation</name>
  <version>0.0.1</version>
  <description>linefit_ground_segmentation</description>

  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>pcl</build_depend>
  <run_depend>pcl</run_depend>

</package>

