<?xml version="1.0"?>
<package format="2">
  <name>points_preprocessor</name>
  <version>1.12.0</version>
  <description>The points_preprocessor package</description>
  <maintainer email="abrahammonrroy@yahoo.com">amc-nu</maintainer>
  <author email="n.patiphon@gmail.com">n-patiphon</author>
  <author email="akihito.ohsato@tier4.jp">aohsato</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>
</package>
